--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,31 @@
 name: Gerar APK LUCROCEL
+
 on:
-  workflow_dispatch: # Isso cria o botão para você gerar o APK quando quiser
+  workflow_dispatch: # Botão manual para gerar o APK
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: Checkout do Código
+        uses: actions/checkout@v4
+
+      - name: Configurar Java 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
-      - name: Grant execute permission for gradlew
+          distribution: 'temurin'
+          cache: 'gradle'
+
+      - name: Corrigir permissão do Gradlew
         run: chmod +x gradlew
-      - name: Build APK
-        run: ./gradlew assembleDebug
-      - name: Upload APK
+
+      - name: Fabricar o APK (Debug)
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Disponibilizar APK para Download
         uses: actions/upload-artifact@v4
         with:
-          name: SuperGente-APK-Offline
+          name: LUCROCEL-App-Instalador
           path: app/build/outputs/apk/debug/app-debug.apk
+
