--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Gerar APK LUCROCEL
 
-on: workflow_dispatch
+on: 
 
 jobs:
   build:
@@ -10,6 +10,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configurar Java 17
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
