--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,20 @@
 name: Gerar APK LUCROCEL
-
-on: 
-
+on: workflow_dispatch: #Isso cria o botão para você gerar o APK quando quiser
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout do Código
-        uses: actions/checkout@v4
-
-      - name: Configurar Java 17
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
-          distribution: 'temurin'
-          cache: 'gradle'
-
-      - name: Corrigir permissão do Gradlew
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
-      - name: Fabricar o APK (Debug)
-        run: ./gradlew assembleDebug --stacktrace
-
-      - name: Disponibilizar APK para Download
+      - name: Build APK
+        run: ./gradlew assembleDebug
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: LUCROCEL-App-Instalador
+          name: LUCROCEL
           path: app/build/outputs/apk/debug/app-debug.apk
